pyproject.tml: new extra when installing in Google Colab.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,11 +17,6 @@ classifiers = [
 dependencies = [
     "Pillow",
     "detectron2",
-    # google-colab in PyPI requires pandas~=0.24.0 which won't install
-    # in recent Python's.  It is only needed when running the notebook
-    # in Colab which already has it anyway, so declaring it here is
-    # pointless and only creates problems.
-    # "google-colab",
     "matplotlib",
     "opencv-python",
     "pandas",
@@ -32,6 +27,13 @@ dependencies = [
 
 
 [project.optional-dependencies]
+colab = [
+    # "google-colab" in PyPI requires pandas~=0.24.0 which won't
+    # install in recent Python versions.  It is only needed when
+    # running the notebook in Colab which already has it anyway.
+    "google-colab",
+    "follow-things-around[widgets]",
+]
 widgets = [
     "ipython",
     "ipywidgets",
